--- a/customer/templates/customer/ordered_items.html
+++ b/customer/templates/customer/ordered_items.html
@@ -1,4 +1,8 @@
-{% extends "accounts/base.html" %} {% block title %}Orders{% endblock %} 
+{% extends "accounts/base.html" %} 
+
+
+{% block title %}Orders{% endblock %} 
+
 
 {% block content %}
 <style>
@@ -11,12 +15,53 @@
   h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #333;
+    font-weight: bold;
   }
 
   p {
     text-align: center;
     font-size: 18px;
     color: #555;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  }
+
+  th, td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+  }
+
+  th {
+    background-color: #f8b195;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+
+  td {
+    font-size: 14px;
+    color: #555;
+  }
+
+  tbody tr:hover {
+    background-color: #fbeaec;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  tbody tr:last-child td {
+    border-bottom: none;
   }
 </style>
 <div class="container mt-4">
